--- a/manifest.json
+++ b/manifest.json
@@ -25,8 +25,8 @@
           "sidebarTab"
         ], 
         "name": "Meteo",
-        "contentUrl": "./dist/index.html",
-        "icon": "./img/weather-imgs/sun/sunny.png"
+        "contentUrl": "./index.html",
+        "icon": "../img/weather-imgs/sun/sunny.png"
       }
     ]
   }
