--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "weather-app",
   "description": "Meteo tablette",
-  "version": "1.0.1",
+  "version": "1.1.0",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html"
